force-app/main/default/objects/Lead/fields/CEO_Owner_FirstName__c.field-meta.xml
<CustomField>
    <fullName>CEO_Owner_FirstName__c</fullName>
    <label>CEO/Owner First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>