force-app/main/default/objects/Lead/fields/Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Address__c</fullName>
    <label>Company Address</label>
    <type>Address</type>
</CustomField>