force-app/main/default/objects/Lead/fields/DandBNumber__c.field-meta.xml
<CustomField>
    <fullName>DandBNumber__c</fullName>
    <label>D&amp;B Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>