force-app/main/default/objects/Lead/fields/Markets_Served__c.field-meta.xml
<CustomField>
    <fullName>Markets_Served__c</fullName>
    <label>Markets Served</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>