force-app/main/default/objects/Lead/fields/NumberOfEmployees__c.field-meta.xml
<CustomField>
    <fullName>NumberOfEmployees__c</fullName>
    <label>No. of Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 50</fullName>
            </value>
            <value>
                <fullName>50 - 250</fullName>
            </value>
            <value>
                <fullName>250 - 1,000</fullName>
            </value>
            <value>
                <fullName>&gt; 1,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>