force-app/main/default/objects/Lead/fields/SolutionAreaOfInterest__c.field-meta.xml
<CustomField>
    <fullName>SolutionAreaOfInterest__c</fullName>
    <label>Solution Area of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Protection</fullName>
            </value>
            <value>
                <fullName>Unified Endpoint Management</fullName>
            </value>
            <value>
                <fullName>Microsoft Platform Management</fullName>
            </value>
            <value>
                <fullName>Information Management</fullName>
            </value>
            <value>
                <fullName>One Identity</fullName>
            </value>
            <value>
                <fullName>Former Balabit solutions</fullName>
            </value>
            <value>
                <fullName>Former Metalogix Solutions</fullName>
            </value>
            <value>
                <fullName>Former ApexSQL Solutions</fullName>
            </value>
            <value>
                <fullName>Former Binary Tree</fullName>
            </value>
            <value>
                <fullName>MSP (Managed Service Provider)</fullName>
            </value>
            <value>
                <fullName>erwin</fullName>
            </value>
            <value>
                <fullName>OneLogin</fullName>
            </value>
            <value>
                <fullName>Technology Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>